--- a/StadiumFour.html
+++ b/StadiumFour.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="image1">
 				<h1 class="BBVAHeader">Estadio BBVA</h1>
-				<img src="images/StadiumFourImage.jpg" alt="Stadium 4 Image">
+				<img src="images/stadiumfourimage.jpg" alt="Stadium 4 Image">
 			</div>
 		</header>
 
