--- a/StadiumTwo.html
+++ b/StadiumTwo.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="image1">
 				<h1 class="AllianzHeader">Allianz Arena</h1>
-				<img src="images/StadiumTwoImage.jpg" alt="Stadium 2 Image">
+				<img src="images/stadiumtwoimage.jpg" alt="Stadium 2 Image">
 			</div>
 		</header>
 
