--- a/StadiumFive.html
+++ b/StadiumFive.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="image1">
 				<h1 class="CampNouHeader">Camp Nou</h1>
-				<img src="images/StadiumFiveImage.jpg" alt="Stadium 5 Image">
+				<img src="images/stadiumfiveimage.jpg" alt="Stadium 5 Image">
 			</div>
 		</header>
 
