--- a/StadiumOne.html
+++ b/StadiumOne.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="image1">
 				<h1>Old Trafford</h1>
-				<img src="images/StadiumOneImage.jpg" alt="Stadium 1 Image">
+				<img src="images/stadiumoneimage.jpg" alt="Stadium 1 Image">
 			</div>
 		</header>
 
